# wagtail-orderable-viewset

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  REQUIREMENTS.md  pyproject.toml  runtests.py  tox.ini
.github/workflows/: ci.yml
docs/: example.md
sandbox/: README.md  db.sqlite3  manage.py
sandbox/orderable_example/: apps.py  models.py  views.py  wagtail_hooks.py
sandbox/orderable_example/management/commands/: create_sample_data.py
sandbox/orderable_example/migrations/: 0001_initial.py  0002_alter_faqitem_options_alter_service_options_and_more.py  0003_person_alter_faqitem_sort_order_and_more.py  0004_alter_person_options_person_is_active_person_team.py
sandbox/sandbox/settings/: base.py  dev.py
src/wagtail_orderable_viewset/: models.py  viewset.py  viewsets.py
src/wagtail_orderable_viewset/templates/wagtail_orderable_viewset/: _reorder_button_js.html  list.html  order.html  snippets_list.html
test/: manage.py  settings.py  urls.py
test/home/: admin_views.py  models.py  wagtail_hooks.py
test/home/management/commands/: fixtures.py
test/home/migrations/: 0003_test_app.py  0004_remove_faqitem_display_order_and_more.py  0005_delete_faqitem_delete_service_and_more.py
test/home/static/css/: styles.css
test/home/templates/: base.html
test/settings/: base.py
test/tests/: test_end_to_end.py  test_incrementing_orderable.py  test_modelviewset_e2e.py  test_orderable_model_viewset.py  test_orderable_snippet_viewset.py  test_orderable_viewset_mixin.py  test_snippetviewset_e2e.py  tests_basic.py
(+3 files in other folders)
