[project]
name = "wagtail-orderable-viewset"
version = "0.1.0"
description = "Add drag-and-drop ordering functionality to Wagtail's SnippetViewSet and ModelViewSet"
readme = "README.md"
authors = [
    { name = "nickmoreton", email = "nickmoreton@me.com" }
]
requires-python = ">=3.9"
dependencies = [
    "wagtail>=7.0",
    "django>=4.2",
]
keywords = ["wagtail", "django", "admin", "ordering", "viewset"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Framework :: Wagtail",
]

[project.urls]
Homepage = "https://github.com/nickmoreton/wagtail-orderable-viewset"
Repository = "https://github.com/nickmoreton/wagtail-orderable-viewset"
Issues = "https://github.com/nickmoreton/wagtail-orderable-viewset/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "faker>=37.5.3",
]
